--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -23,10 +23,11 @@
                   <input hidden name="datepicker"
                          class="form-control"
                          ngbDatepicker
+                         [footerTemplate]="footerTemplate"
                          #datepicker="ngbDatepicker"
                          [autoClose]="'outside'"
                          (dateSelect)="onDateSelection($event)"
-                         [displayMonths]="2"
+                         [displayMonths]="1"
                          [dayTemplate]="t"
                          outsideDays="hidden"
                          [startDate]="fromDate!"
@@ -43,15 +44,20 @@
                   </ng-template>
                 </div>
               </div>
-                <div class="form-group col-lg-8">
+
+              <div class="form-group col-lg-8">
                   <label class="form-label">Seleccionar Rango de Fecha</label>
                   <div class="input-group">
-                    <input hidden #dpFromDate
+                    <input hidden
+                           #dpFromDate
                            class="form-control" placeholder="yyyy-mm-dd"
                            name="dpFromDate"
                            [value]="formatter.format(fromDate)"
-                           (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-                    <input class="form-control col-lg-8" [value]="rangoFechas(dpFromDate.value,dpToDate.value)">
+                           (input)="fromDate = validateInput(fromDate, dpFromDate.value)"
+                           >
+                    <input #rango
+                            class="form-control col-lg-8"
+                            [value]="rangoFechas(dpFromDate.value,dpToDate.value)">
                     <div class="input-group-append">
                       <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
                         <i class="fa fa-calendar icon"></i>
@@ -59,10 +65,20 @@
                     </div>
                   </div>
                  </div>
-                 <div  class="form-group col-lg-4">
-                   <div class="row"><label>Noches:</label></div>
 
-                      <label class="font-weight-bold h1 text-right">{{huesped.noches}}</label>
+                 <ng-template #footerTemplate>
+                  <hr class="my-0">
+                  <!-- <button class="btn btn-primary btn-sm m-2 float-left" (click)="model=today d.close()">Today</button> -->
+                  <button class="btn btn-secondary btn-sm m-2 float-right" (click)="datepicker.close()">Close</button>
+                </ng-template>
+
+
+
+                 <div  class="form-group col-lg-4">
+                    <div class="input-group">
+                     <label>Noches:</label>
+                     </div>
+                      <label style="padding-left: 30%;" class="font-weight-bold h1 text-right">{{huesped.noches}}</label>
                  </div>
 
              <!-- <div class="form-group col-lg-6"> -->
@@ -168,7 +184,7 @@
                       <option selected value="0">Selecciona Tipo de Cuarto</option>
                       <option value="1">Todos los Cuartos</option>
                       <ng-container *ngFor="let tipoCuarto of codigoCuarto">
-                        <option> {{tipoCuarto}} </option>
+                        <option> {{tipoCuarto.replace("_"," ")}} </option>
                       </ng-container>
                     </select>
                 </label>
@@ -178,7 +194,7 @@
                   <div class="input-group-append">
                     <button
                         class="btn btn-success text-center"
-                        (click)="buscaDispo();"
+                        (click)="buscaDispo();setStep(1) "
                         type="button"
                         > Buscar Disponibilidad
                     </button>
@@ -189,15 +205,14 @@
 
 
 
-     <ng-container *ngIf="disponibilidad.length !==0 ">
-      <mat-accordion class="example-headers-align" multi>
-        <mat-expansion-panel>
+  <ng-container *ngIf="disponibilidad.length !==0 ">
+      <mat-accordion [style]="accordionDisplay" class="example-headers-align" multi>
+        <mat-expansion-panel  [expanded]="step === 1"  hideToggle>
             <mat-expansion-panel-header style="background-color:#99d284;">
             <mat-panel-title>
               CON DISPONIBILIDAD
             </mat-panel-title>
             <mat-panel-description *ngIf="bandera==false">
-             {{cuarto}}
              <!-- <mat-icon>account_circle</mat-icon> -->
             </mat-panel-description>
             <mat-panel-description *ngIf="bandera==true">
@@ -209,7 +224,7 @@
           <!--Contenido del Accordion-->
             <div  class="table-responsive angular-bootstrap-table">
               <table *ngIf="bandera==false" class="table table-head-custom table-vertical-center overflow-hidden">
-                <div class="modal-header"> {{cuarto}} </div>
+                <div class="font-weight-bold text-uppercase modal-header"> {{cuarto.replace("_"," ")}} </div>
                 <thead>
                   <th>
                     # de Cuarto
@@ -238,9 +253,10 @@
             </ng-container>
               </table>
 
+
 <ng-container *ngIf="bandera==true">
   <ng-container *ngFor="let codigosCuarto of codigoCuarto;  let i = index">
-    <div class="modal-header">{{codigosCuarto}}</div>
+    <div class="font-weight-bold text-uppercase modal-header">{{codigosCuarto.replace("_"," ")}}</div>
         <table  class="table table-head-custom table-vertical-center overflow-hidden">
           <thead>
             <th>
@@ -277,8 +293,8 @@
         </mat-expansion-panel>
       </mat-accordion>
      </ng-container>
-     <ng-container *ngIf="disponibilidad.length ===0 ">
-      <mat-accordion class="example-headers-align" multi>
+     <ng-container *ngIf="disponibilidad.length === 0 ">
+      <mat-accordion [style]="accordionDisplay" class="example-headers-align" multi>
         <mat-expansion-panel>
             <mat-expansion-panel-header style="background-color:#fa6d7c;">
             <mat-panel-title>
@@ -301,9 +317,30 @@
     <div class="overlay overlay-block cursor-default modal-body" style="background-color: rgb(224, 224, 224);">
       <div class="form-group row">
 
-        <div class="form-group col-lg-12">
-          <label class="input-label">Buscar Húsped
-            <div class="input-group">
+            <div class="form-group col-lg-12">
+              <label class="input-label">Buscar Cliente</label>
+
+              <input type="text"
+                    placeholder="Busca por Nombre"
+                    aria-label="Number"
+                    matInput
+                    formControlName="searchTerm"
+                    class="form-control col-lg-12"
+                    (click)="showList($event)"
+                    value="{{huesped.nombre}}"
+                    >
+
+
+              <div class="col-lg-12" [style]="displayNone" class="name-container-dropdown">
+                <mat-selection-list (click)="closeList();onSelectHuesped(nombres.selectedOptions.selected[0]?.value)" #nombres [multiple]="false" >
+                  <mat-list-option  *ngFor="let huesped of customerService.items$ | async"  [value]="huesped.nombre">
+                    {{huesped.nombre}}
+                  </mat-list-option>
+                </mat-selection-list>
+              </div>
+
+
+            <!-- <div class="input-group">
               <select
                 class="form-control form-control-lg form-control-solid"
                 name="buscahuesped"
@@ -315,12 +352,14 @@
                   </option>
                 </ng-container>
               </select>
-            </div>
-          </label>
-          <button class="btn btn-primary" type="button" disabled>
+            </div> -->
+
+          <!-- <button class="btn btn-primary" type="button" disabled>
             <i class="fa fa-search"></i>
-          </button>
+          </button> -->
+
         </div>
+      </div>
 
         <div class="col-lg-12">
           <label class="form-label">Escribe tu Nombre</label>
@@ -357,7 +396,7 @@
             Maximo 100 letras
           </div>
         </div>
-        </div>
+
         <div class="form-group row">
 
         <div class="col-lg-6">
@@ -483,5 +522,8 @@
         </div>
       </div>
     </div>
+
 </form>
+
+
 
