--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.scss
@@ -16,3 +16,18 @@
   .states:hover{
     background:#C2C2C2
   }
+
+//   .ngb-dp-day {
+//   width: 4rem !important;
+//   height: 4rem !important;
+// }
+
+// .ngb-dp-day > div {
+//   width: 4rem !important;
+//   height: 4rem !important;
+//   line-height: 4rem !important;
+// }
+
+// .ngb-dp-weekday {
+//   width: 4rem !important;
+// }
